# sales-product

./: .env.example  .gitignore  README.md  auth.ts  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.mjs  package-lock.json  package.json  prevChats.md  tailwind.config.ts  vitest.config.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx
app/(workspace)/: layout.tsx  loading.tsx
app/actions/: activities.ts  approvals.ts  calendar.ts  crm-records.ts  crm-sync.ts  meeting-notes.ts  notifications.ts  sequences.ts  strategy.ts  tasks.ts
app/blog/: page.tsx
app/book-demo/: page.tsx
app/linkedin-extension/: page.tsx
app/resources/: page.tsx
app/showcase/: page.tsx
components/cockpit/: ai-fallback-warning.tsx  approval-queue.tsx  audit-trail.tsx  buying-signal-alerts.tsx  calendar-ingest.tsx  cockpit-workspace.tsx  copilot-panel.tsx  crm-command-center.tsx  crm-sync-panel.tsx  deal-health.tsx  follow-up-composer.tsx  insights-sidebar.tsx  lead-enrichment-dedupe.tsx  meeting-brief.tsx  meeting-notes-capture.tsx  next-actions.tsx  pilot-metrics-panel.tsx  pipeline-metrics.tsx  sequence-execution-board.tsx  sequence-personalization.tsx  stakeholder-map.tsx  strategy-lab.tsx
components/crm/: account-form.tsx  accounts-table.tsx  activity-timeline.tsx  (+3 more)
lib/: env.ts  logger.test.ts  logger.ts
prisma/: schema.prisma  seed.mjs
scripts/: test-supabase-auth-matrix.cjs  test-supabase-conn.cjs
services/: README.md
services/intelligence-worker-py/: README.md  pyproject.toml
services/intelligence-worker-py/app/: main.py
(+192 files in other folders)
