[project]
name = "intelligence-worker-py"
version = "0.1.0"
description = "Sales super-app intelligence worker (transcript + signal processing)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8091
